--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 Django = "^3.2"
 psycopg2-binary = "^2.8.6"
 djangorestframework = "^3.12.4"
+django-localflavor = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.4b2", allow-prereleases = true}
